fixed grid sizing bug on mobile

--- a/src/Grid.css
+++ b/src/Grid.css
@@ -67,6 +67,7 @@
 
 @media only screen and (max-width: 600px) {
   .grid {
-    width: 340px;
+    /* width: 340px; */
+    width: 100%;
   }
 }
